# mvclmandelbrot

./: readme.md
project/: CException.h  CMakeLists.txt  COpenCL.h  COpenCL.hpp  NStringTool.cpp  NStringTool.h  WriteTga.cpp  main.cpp  makefile  mandelbrot.cl  mandelbrotD.cl  readme.txt  run-double.sh  run-float.sh
project/deprecated/: makefile
project/opencl/: mandelbrotD.cl
project/script/: debian-install-amd-rocm.sh
project/source/: CException.h  COpenCL.h  COpenCL.hpp  NStringTool.cpp  WriteTga.cpp  main.cpp
